--- a/src/mitutoyo/interfaces/CertificadosGUI.form
+++ b/src/mitutoyo/interfaces/CertificadosGUI.form
@@ -5,11 +5,14 @@
     <Property name="border" type="javax.swing.border.Border" editor="org.netbeans.modules.form.editors2.BorderEditor">
       <Border info="org.netbeans.modules.form.compat2.border.TitledBorderInfo">
         <TitledBorder title="Certificados">
-          <Font PropertyName="font" name="DialogInput" size="12" style="1"/>
+          <Font PropertyName="font" name="Bitstream Vera Sans" size="12" style="1"/>
         </TitledBorder>
       </Border>
     </Property>
-    <Property name="name" type="java.lang.String" value="Certificacdos" noResource="true"/>
+    <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
+      <Font name="URW Gothic" size="13" style="0"/>
+    </Property>
+    <Property name="name" type="java.lang.String" value="Certificados" noResource="true"/>
   </Properties>
   <AuxValues>
     <AuxValue name="FormSettings_autoResourcing" type="java.lang.Integer" value="0"/>
@@ -46,9 +49,12 @@
         <Property name="border" type="javax.swing.border.Border" editor="org.netbeans.modules.form.editors2.BorderEditor">
           <Border info="org.netbeans.modules.form.compat2.border.TitledBorderInfo">
             <TitledBorder title="Inspeccion">
-              <Font PropertyName="font" name="DialogInput" size="12" style="1"/>
+              <Font PropertyName="font" name="Bitstream Vera Sans" size="12" style="1"/>
             </TitledBorder>
           </Border>
+        </Property>
+        <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
+          <Font name="URW Gothic" size="13" style="0"/>
         </Property>
         <Property name="name" type="java.lang.String" value="Inspeccion" noResource="true"/>
       </Properties>
@@ -192,8 +198,13 @@
       <Properties>
         <Property name="border" type="javax.swing.border.Border" editor="org.netbeans.modules.form.editors2.BorderEditor">
           <Border info="org.netbeans.modules.form.compat2.border.TitledBorderInfo">
-            <TitledBorder title="Calibracion"/>
+            <TitledBorder title="Calibracion">
+              <Font PropertyName="font" name="Bitstream Vera Sans" size="12" style="1"/>
+            </TitledBorder>
           </Border>
+        </Property>
+        <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
+          <Font name="URW Gothic" size="13" style="0"/>
         </Property>
         <Property name="name" type="java.lang.String" value="Calibracion" noResource="true"/>
       </Properties>
@@ -276,9 +287,12 @@
             <Property name="border" type="javax.swing.border.Border" editor="org.netbeans.modules.form.editors2.BorderEditor">
               <Border info="org.netbeans.modules.form.compat2.border.TitledBorderInfo">
                 <TitledBorder title="Rangos de Error">
-                  <Font PropertyName="font" name="DialogInput" size="12" style="1"/>
+                  <Font PropertyName="font" name="Bitstream Vera Sans" size="12" style="1"/>
                 </TitledBorder>
               </Border>
+            </Property>
+            <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
+              <Font name="URW Gothic" size="13" style="0"/>
             </Property>
             <Property name="name" type="java.lang.String" value="Rangos de Error" noResource="true"/>
           </Properties>
@@ -385,6 +399,9 @@
                   <Format subtype="1" type="0"/>
                 </Property>
                 <Property name="horizontalAlignment" type="int" value="0"/>
+                <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
+                  <Font name="URW Gothic" size="13" style="0"/>
+                </Property>
               </Properties>
             </Component>
             <Component class="javax.swing.JLabel" name="lblAnguloHz">
