--- a/src/mitutoyo/interfaces/MetricaDeMedicionGUI.form
+++ b/src/mitutoyo/interfaces/MetricaDeMedicionGUI.form
@@ -17,7 +17,7 @@
     <AuxValue name="FormSettings_listenerGenerationStyle" type="java.lang.Integer" value="0"/>
     <AuxValue name="FormSettings_variablesLocal" type="java.lang.Boolean" value="false"/>
     <AuxValue name="FormSettings_variablesModifier" type="java.lang.Integer" value="2"/>
-    <AuxValue name="designerSize" type="java.awt.Dimension" value="-84,-19,0,5,115,114,0,18,106,97,118,97,46,97,119,116,46,68,105,109,101,110,115,105,111,110,65,-114,-39,-41,-84,95,68,20,2,0,2,73,0,6,104,101,105,103,104,116,73,0,5,119,105,100,116,104,120,112,0,0,0,-4,0,0,0,-10"/>
+    <AuxValue name="designerSize" type="java.awt.Dimension" value="-84,-19,0,5,115,114,0,18,106,97,118,97,46,97,119,116,46,68,105,109,101,110,115,105,111,110,65,-114,-39,-41,-84,95,68,20,2,0,2,73,0,6,104,101,105,103,104,116,73,0,5,119,105,100,116,104,120,112,0,0,0,-50,0,0,0,-10"/>
   </AuxValues>
 
   <Layout class="org.netbeans.modules.form.compat2.layouts.DesignBoxLayout">
@@ -29,9 +29,12 @@
         <Property name="border" type="javax.swing.border.Border" editor="org.netbeans.modules.form.editors2.BorderEditor">
           <Border info="org.netbeans.modules.form.compat2.border.TitledBorderInfo">
             <TitledBorder title="Metrica de Medicion">
-              <Font PropertyName="font" name="Dialog" size="12" style="1"/>
+              <Font PropertyName="font" name="Bitstream Vera Sans" size="12" style="1"/>
             </TitledBorder>
           </Border>
+        </Property>
+        <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
+          <Font name="URW Gothic" size="13" style="0"/>
         </Property>
         <Property name="name" type="java.lang.String" value="Metrica de Medicion" noResource="true"/>
       </Properties>
@@ -48,7 +51,7 @@
                       <Component id="lblPrecision" alignment="0" min="-2" max="-2" attributes="0"/>
                       <Component id="lblRango" linkSize="2" alignment="0" min="-2" max="-2" attributes="0"/>
                   </Group>
-                  <EmptySpace type="separate" max="32767" attributes="0"/>
+                  <EmptySpace type="unrelated" max="32767" attributes="0"/>
                   <Group type="103" groupAlignment="0" attributes="0">
                       <Component id="jftxRango" linkSize="3" alignment="0" min="-2" pref="50" max="-2" attributes="0"/>
                       <Component id="jftxPrecision" linkSize="3" alignment="0" min="-2" max="-2" attributes="0"/>
@@ -68,22 +71,22 @@
                       <Component id="lblRango" alignment="2" min="-2" max="-2" attributes="0"/>
                       <Component id="jftxRango" alignment="2" min="-2" max="-2" attributes="0"/>
                   </Group>
-                  <EmptySpace type="separate" pref="22" max="32767" attributes="0"/>
+                  <EmptySpace type="unrelated" max="32767" attributes="0"/>
                   <Group type="103" groupAlignment="3" attributes="0">
                       <Component id="lblPrecision" alignment="3" min="-2" max="-2" attributes="0"/>
                       <Component id="jftxPrecision" alignment="3" min="-2" max="-2" attributes="0"/>
                   </Group>
-                  <EmptySpace type="separate" pref="23" max="32767" attributes="0"/>
+                  <EmptySpace type="unrelated" max="32767" attributes="0"/>
                   <Group type="103" groupAlignment="3" attributes="0">
                       <Component id="lblResolucion" alignment="3" min="-2" max="-2" attributes="0"/>
                       <Component id="jftxResolucion" alignment="3" min="-2" max="-2" attributes="0"/>
                   </Group>
-                  <EmptySpace type="separate" pref="23" max="32767" attributes="0"/>
+                  <EmptySpace type="unrelated" max="32767" attributes="0"/>
                   <Group type="103" groupAlignment="3" attributes="0">
                       <Component id="lblGraduacion" alignment="3" min="-2" max="-2" attributes="0"/>
                       <Component id="jftxGraduacion" alignment="3" min="-2" max="-2" attributes="0"/>
                   </Group>
-                  <EmptySpace type="separate" pref="23" max="32767" attributes="0"/>
+                  <EmptySpace type="unrelated" max="32767" attributes="0"/>
                   <Group type="103" groupAlignment="3" attributes="0">
                       <Component id="lblPresionMedida" alignment="3" min="-2" max="-2" attributes="0"/>
                       <Component id="jftxPresionDeMedida" alignment="3" min="-2" max="-2" attributes="0"/>
