--- a/src/mitutoyo/interfaces/MetricaMicrometricaGUI.form
+++ b/src/mitutoyo/interfaces/MetricaMicrometricaGUI.form
@@ -26,9 +26,12 @@
         <Property name="border" type="javax.swing.border.Border" editor="org.netbeans.modules.form.editors2.BorderEditor">
           <Border info="org.netbeans.modules.form.compat2.border.TitledBorderInfo">
             <TitledBorder title="Metrica Micrometrica">
-              <Font PropertyName="font" name="DialogInput" size="12" style="1"/>
+              <Font PropertyName="font" name="Bitstream Vera Sans" size="12" style="1"/>
             </TitledBorder>
           </Border>
+        </Property>
+        <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
+          <Font name="URW Gothic" size="13" style="0"/>
         </Property>
         <Property name="name" type="java.lang.String" value="Metrica micrometrica" noResource="true"/>
       </Properties>
