--- a/src/mitutoyo/interfaces/ObservacionesGUI.form
+++ b/src/mitutoyo/interfaces/ObservacionesGUI.form
@@ -46,11 +46,14 @@
         <Component class="javax.swing.JTextArea" name="jTextArea1">
           <Properties>
             <Property name="columns" type="int" value="20"/>
+            <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
+              <Font name="URW Gothic" size="13" style="0"/>
+            </Property>
             <Property name="rows" type="int" value="5"/>
             <Property name="border" type="javax.swing.border.Border" editor="org.netbeans.modules.form.editors2.BorderEditor">
               <Border info="org.netbeans.modules.form.compat2.border.TitledBorderInfo">
                 <TitledBorder title="Observaciones">
-                  <Font PropertyName="font" name="Dialog" size="12" style="1"/>
+                  <Font PropertyName="font" name="Bitstream Vera Sans" size="12" style="1"/>
                 </TitledBorder>
               </Border>
             </Property>
